Fix getMemberById potentially throwing an exception